--- a/ts/package.json
+++ b/ts/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "bench": "vitest bench --run",
     "test": "vitest run",
     "lint": "eslint ."
   },
