feat(e2ee): add input validation and improve test coverage
- Validate PSK length and channel ID in client handshake
- Add validation for key and nonce length in record decryption
- Add tests for missing handshake_id, bad nonce_s length, and bad server ephemeral public key length
- Update build script to use tsconfig.build.json

--- a/ts/package.json
+++ b/ts/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.build.json",
     "bench": "vitest bench --run",
     "test": "vitest run",
     "lint": "eslint ."
