--- a/ts/package.json
+++ b/ts/package.json
@@ -27,6 +27,9 @@
       "default": "./dist/direct-client/index.js"
     }
   },
+  "engines": {
+    "node": "^20.0.0 || ^22.0.0 || >=24.0.0"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "bench": "vitest bench --run",
