--- a/ts/package.json
+++ b/ts/package.json
@@ -14,9 +14,25 @@
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
+    "./e2ee": {
+      "types": "./dist/e2ee/index.d.ts",
+      "default": "./dist/e2ee/index.js"
+    },
+    "./ws": {
+      "types": "./dist/ws/index.d.ts",
+      "default": "./dist/ws/index.js"
+    },
+    "./yamux": {
+      "types": "./dist/yamux/index.d.ts",
+      "default": "./dist/yamux/index.js"
+    },
     "./rpc": {
       "types": "./dist/rpc/index.d.ts",
       "default": "./dist/rpc/index.js"
+    },
+    "./rpc-proxy": {
+      "types": "./dist/rpc-proxy/index.d.ts",
+      "default": "./dist/rpc-proxy/index.js"
     },
     "./tunnel-client": {
       "types": "./dist/tunnel-client/index.d.ts",
