--- a/flowersec-ts/package.json
+++ b/flowersec-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flowersec/core",
+  "name": "@floegence/flowersec-core",
   "version": "0.0.0",
   "private": true,
   "type": "module",
