--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,15 +163,21 @@ jobs:
             )
             ( cd examples && \
               CGO_ENABLED=0 GOOS="$os" GOARCH="$arch" \
-              go build -trimpath -o "../$dir/bin/flowersec-controlplane-demo${ext}" ./go/controlplane_demo \
+              go build -trimpath \
+                -ldflags "-s -w -X main.version=v${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" \
+                -o "../$dir/bin/flowersec-controlplane-demo${ext}" ./go/controlplane_demo \
             )
             ( cd examples && \
               CGO_ENABLED=0 GOOS="$os" GOARCH="$arch" \
-              go build -trimpath -o "../$dir/bin/flowersec-server-endpoint-demo${ext}" ./go/server_endpoint \
+              go build -trimpath \
+                -ldflags "-s -w -X main.version=v${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" \
+                -o "../$dir/bin/flowersec-server-endpoint-demo${ext}" ./go/server_endpoint \
             )
             ( cd examples && \
               CGO_ENABLED=0 GOOS="$os" GOARCH="$arch" \
-              go build -trimpath -o "../$dir/bin/flowersec-direct-demo${ext}" ./go/direct_demo \
+              go build -trimpath \
+                -ldflags "-s -w -X main.version=v${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" \
+                -o "../$dir/bin/flowersec-direct-demo${ext}" ./go/direct_demo \
             )
             ( cd examples && \
               CGO_ENABLED=0 GOOS="$os" GOARCH="$arch" \
